// Vitest Snapshot v1

exports[`<Header/> > should render authenticated header 1`] = `
<div>
  <header
    class="_header_q598i_1"
  >
    <div>
      <a
        class="_appName_q598i_9"
        href="/ideas"
      >
        Ponti UI
      </a>
    </div>
    <div
      class="_leftNav_q598i_22"
    >
      <a
        class="_menuItem_q598i_27"
        href="/account"
      >
        Account
      </a>
      <button
        class="_container_1pont_1 _menuItem_q598i_27"
        data-testid="button"
        type="button"
      >
        Log Out
      </button>
    </div>
  </header>
</div>
`;

exports[`<Header/> > should render unauthenticated header 1`] = `
<div>
  <header
    class="_header_q598i_1"
  >
    <div>
      <a
        class="_appName_q598i_9"
        href="/ideas"
      >
        Ponti UI
      </a>
    </div>
    <div
      class="_leftNav_q598i_22"
    >
      <button
        class="_container_1pont_1 _menuItem_q598i_27"
        data-testid="button"
        type="button"
      >
        Log In
      </button>
      <button
        class="_container_1pont_1  css-rduvsv"
        data-testid="button"
        type="button"
      >
        Get Started
      </button>
    </div>
  </header>
</div>
`;
